apps/routers/weave-gitops/mccp-howard-moomboo-service-endpoints.yaml
kind: Service
apiVersion: v1
metadata:
  name: mccp-howard-moomboo
  namespace: traefik-staging
spec:
  ports:
    - name: public-ingress
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: mccp-howard-moomboo
  namespace: traefik-staging
subsets:
- addresses:
  - ip: 10.17.12.202
  ports:
  - port: 443
    name: public-ingress
---
kind: Service
apiVersion: v1
metadata:
  name: mccp-howard-moomboo-public-challenge
  namespace: traefik-staging
spec:
  ports:
    - name: public-ingress
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: mccp-howard-moomboo-public-challenge
  namespace: traefik-staging
subsets:
- addresses:
  - ip: 10.17.12.206
  ports:
  - port: 80
    name: public-ingress
