apps/routers/weave-gitops/mccp-howard-moomboo-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mccp-howard-moomboo-public-challenge
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`mccp.howard.moomboo.space`)
    services:
    - kind: Service
      name: mccp-howard-moomboo-public-challenge
      namespace: traefik-staging
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mccp-howard-moomboo
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`mccp.howard.moomboo.space`)
    services:
    - name: mccp-howard-moomboo
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
