apps/routers/weave-gitops/podinfo-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo-insecure
  namespace: traefik-staging
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`podinfo.howard.moomboo.space`)
    kind: Rule
    services:
    - kind: Service
      name: podinfo-http
      namespace: podinfo-staging
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: podinfo
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`podinfo.howard.moomboo.space`)
    services:
    - name: podinfo
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
